--- a/project_guideline/android/java/com/google/research/guideline/inject/BUILD
+++ b/project_guideline/android/java/com/google/research/guideline/inject/BUILD
@@ -25,5 +25,6 @@ android_library(
     deps = [
         "//:dagger-android",
         "@maven//:androidx_appcompat_appcompat",
+        "@maven//:javax_inject_javax_inject",
     ],
 )
